bluejay-validator/tests/snapshots/executable_integration_test__error@all_variables_used.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/all_variables_used.graphql
---
Error: Variable definition $atOtherHomes not used
   ╭─[<unknown>:1:22]
   │
 1 │ query variableUnused($atOtherHomes: Boolean) {
   │                      ──────┬──────  
   │                            ╰──────── Variable definition not used
───╯

Error: Variable definition $atOtherHomes not used
   ╭─[<unknown>:7:37]
   │
 7 │ query variableNotUsedWithinFragment($atOtherHomes: Boolean) {
   │                                     ──────┬──────  
   │                                           ╰──────── Variable definition not used
───╯

Error: Variable definition $extra not used
    ╭─[<unknown>:23:49]
    │
 23 │ query queryWithExtraVar($atOtherHomes: Boolean, $extra: Int) {
    │                                                 ───┬──  
    │                                                    ╰──── Variable definition not used
────╯

